# libfst

./: LICENSE  meson.build
.github/workflows/: ci.yml
src/: fstapi.c  fstapi.h  meson.build
tests/: empty_file.c  meson.build  write_and_read.c
